# ytdl

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
docs/: android-dev-environment.md  android-gui-reference.md  android-media-processor.md  android-play-data-safety.md  android-privacy-policy-draft.md  android-third-party-licenses.md  gui-reference.md
docs/qa/: android-full-visual-test-plan.md  android-mvp-smoke.md  android-task1-smoke.md  function-test-matrix.md  real-analysis.json  test-evidence-boundary.md  visual-checklist.md  visual-diff.json
licenses/: THIRD_PARTY_NOTICES.txt
packaging/: windows-app.manifest  ytdl_gui.spec
scripts/: android_env.ps1  fetch_ytdlp.ps1  package_win.ps1  real_batch_smoke.ps1  real_download_matrix.ps1  real_full_smoke.ps1  real_subtitle_smoke.ps1  real_url_smoke.ps1  render_qa_screenshots.py  smoke_packaged.ps1  visual_compare.py
src/ytdl_gui/: __init__.py  app.py  config_store.py  cookies.py  ffmpeg.py  main.py  (+10 more)
tests/: conftest.py  test_android_ytdl_bridge.py  test_config_history_cookies.py  test_download_progress.py  test_ffmpeg_detection.py  test_format_preferences_ui.py  test_format_subtitle_analysis.py  test_gui_smoke.py  test_packaging_scaffold.py  test_preview_player.py  test_queue_controls_gui.py  test_queue_manager.py  test_render_qa_screenshots.py  test_settings_actions.py  test_ui_service_wiring.py  test_visual_compare.py  test_workers.py  test_ytdlp_update.py
(+81 files in other folders)
