[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdl-gui"
version = "0.1.0"
description = "Win11 desktop GUI for YouTube-first yt-dlp downloads"
requires-python = ">=3.11"
dependencies = ["PySide6==6.8.1.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
