[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdl-gui"
version = "1.0.0"
description = "Windows GUI for YouTube-first yt-dlp downloads"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["PySide6==6.8.1.1"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
